Focusing scroll container before scrolling breaks smooth scrolling https://bugs.webkit.org/show_bug.cgi?id=239605

Reviewed by Wenson Hsieh.

Source/WebCore:

If script calls focus() and then scrollTo({ behavior: smooth }) in the same runloop, the
scrollToFocusedElementInternal() that happens on a zero-delay timer in FrameView will stop
the animated scroll.

Fix by having programmatic scrolls on Element and DOMWindow cancel any pending focus-related
scroll.

Test: fast/scrolling/programmatic-smooth-scroll-after-focus.html

* dom/Element.cpp:
(WebCore::Element::scrollTo):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::scrollTo const):
* page/FrameView.cpp:
(WebCore::FrameView::maintainScrollPositionAtAnchor):
(WebCore::FrameView::setScrollPosition):
(WebCore::FrameView::cancelScheduledScrollToFocusedElement):
(WebCore::FrameView::scrollToAnchor):
(WebCore::FrameView::setWasScrolledByUser):
* page/FrameView.h:

LayoutTests:

* fast/scrolling/programmatic-smooth-scroll-after-focus-expected.txt: Added.
* fast/scrolling/programmatic-smooth-scroll-after-focus.html: Added.
* platform/win/TestExpectations:

Canonical link: https://commits.webkit.org/249904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293260 268f45cc-cd09-0410-ab3c-d52691b4dbfc